Fix overflow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -85,7 +85,7 @@
     display: inline;
   }
 
-  .sm-ov-a {
+  .sm-ov-y-a {
     height: 100vh;
     overflow: auto;
   }
